2011-01-03  Julie-Jeongeun-Kim  <Jeongeun.Kim@obigo.com>

        Reviewed by Darin Adler.

        HTML5 Conformance Test failure: approved/xhtml5/object_border_pixel.xhtml
        https://bugs.webkit.org/show_bug.cgi?id=48596
        
        border attribute was not parsed in HTMLObjectElement.
        I added code for it as HTMLImageElement handled.

        new test:fast/html/object-border.html

        * html/HTMLObjectElement.cpp:
        (WebCore::HTMLObjectElement::parseMappedAttribute):

2011-01-03  Darin Adler  <darin@apple.com>

        Try to fix Chromium build.

        * history/HistoryItem.cpp:
        (WebCore::HistoryItem::encodeBackForwardTreeNode): Added a V8 case here.
        Not sure this ever will be used with V8.
        (WebCore::HistoryItem::decodeBackForwardTree): Ditto.

2011-01-03  Darin Adler  <darin@apple.com>

        Try to fix Leopard build.

        * history/HistoryItem.cpp: Use a consistent type, uint64_t, for the
        size variable.

2011-01-03  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Darin Adler.

        Fixes before child calculation when adding anonymous childs to table parts.
        https://bugs.webkit.org/show_bug.cgi?id=50932

        Fix in r74364 was incomplete. When before child is equal to the table part(to
        which the new child is getting added), it confuses the table part to add it
        incorrectly as an after child. The patch fixes by passing the before child as
        the table part's first child.

        Tests: fast/css-generated-content/table-before-after-child-add.html
               fast/css-generated-content/table-cell-before-after-child-add.html
               fast/css-generated-content/table-row-before-after-child-add.html
               fast/css-generated-content/table-row-before-after-child-add.html

        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::addChild):
        * rendering/RenderTableRow.cpp:
        (WebCore::RenderTableRow::addChild):